--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <!--(João Paulo) aqui eu to colocando um href para usar os ícones do fontawesome.com para fazer o ícone do instagram no footer-->
 
-    <link rel="stylesheet" href="nao_abrir/style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 
     <title>NutriHUB</title>
 </head>
@@ -36,7 +36,7 @@
         <nav class="nav-bar"> <!--(Gabriel H.) Código usado para a exibição se enquadrar aos computadores -->
             <div class="logo"> <!--(Richard)Aqui estou colocando a imagem e classificando ela -->
                 <a href="index.html"><!--(João Paulo) aqui eu coloquei um href para a página inicial na logo pra ficar clicável-->
-                    <img src="nao_abrir/nh.jpg" alt="Logo">
+                    <img src="nh.jpg" alt="Logo">
                 </a>
             </div>
             <div class="nav-list">
@@ -71,7 +71,7 @@
         </div><!--(Gabriel H.) Fim do código usado para a exibição em celulares/tablets -->
     </header> <!--(Gabriel H.) Fim do Header -->
 
-    <script src="nao_abrir/script.js"></script>
+    <script src="script.js"></script>
 
     <!--(Gabriel H.) Banner rotativo(carrossel) -->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -82,13 +82,13 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img id="carrossel" src="nao_abrir/img01.jpg" alt="Imagem1">
+                <img id="carrossel" src="img01.jpg" alt="Imagem1">
             </div>
             <div class="carousel-item">
-                <img id="carrossel" src="nao_abrir/img02.jpg" alt="Imagem2">
+                <img id="carrossel" src="img02.jpg" alt="Imagem2">
             </div>
             <div class="carousel-item">
-                <img id="carrossel" src="nao_abrir/img03.jpg" alt="Imagem3">
+                <img id="carrossel" src="img03.jpg" alt="Imagem3">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -101,6 +101,34 @@
         </a>
     </div>
     <!--(Gabriel H.) Fim do banner rotativo(carrossel) -->
+
+
+    <!--Textos do site que alguma hora vai ser estilizado-->
+    <h1>O que é uma caloria?</h1>
+    <p>Todo alimento tem um valor energético, a caloria é nada mais que uma unidade
+         de medida que nos possibilita quantificar o valor energético dos alimentos.</p>
+         <br><br>
+    
+         <h1>Quantas calorias comer por dia?</h1>
+         <p>Para você saber quantas calorias você precisa ingerir diariamente, você pode consultar a nossa <a href="ARQUIVO_MUDAR.HTML">calculadora de Taxa Metabólica Basal</a></p>
+
+         
+         <h1>Como saber quantas calorias um alimento tem?</h1>
+    <p>Todos os alimentos tem uma tabela nutricional específica, geralmente ela fica na parte de trás do rótulo</p>
+    <img src="FOTOILUSTRATIVA_COLOCAR">
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!--(João Paulo)código usado para a exibição do footer responsivo-->
     <main></main>
