--- a/dieta.html
+++ b/dieta.html
@@ -106,28 +106,55 @@
     <br>
     <br>
     <br>
-    
+        <!--(Richard)Explicando o TMB -->
+    <div >
+    <h3>O que é TMB?</h3>
+    <p>
+     E a Taxa Metabólica Basal é a quantidade mínima de energia (calorias) que o corpo necessita para manter suas funções vitais enquanto está em repouso. 
+     Isso inclui funções como respiração, circulação sanguínea, controle da temperatura corporal e atividade celular.
+    </p>
+    <h3>Para que serve?</h3>
+    <p>
+            A TMB é usada para estimar a quantidade de calorias que uma pessoa precisa consumir diariamente para manter seu peso, considerando apenas o metabolismo em repouso.
+             É uma medida fundamental em nutrição e dietética.
+    </p>
+    <h3>Como pode ajudar uma pessoa?</h3>
+    <p>
+
+           Pode ajudar a você á controlar seu peso, ou seja, a determinar quantas calorias consumir para ganhar, perder ou manter o peso.
+            Planejar sua Dietas, vai facilita a personalização de dietas baseadas nas necessidades calóricas individuais.
+            Saúde Geral Compreender a TMB pode levar a hábitos alimentares mais saudáveis e informados, contribuindo para uma melhor saúde geral.
+    </p>
+
+</div>
     <!--(Richard) Começando o form -->
-    <form id="tmbForm">
-        <label for="idade">Idade:</label>
-        <input type="number" id="idade">
-        <br>
-        <label for="sexo">Sexo:</label>
-        <select id="sexo">
-             <option value="masculino"></option>
-            <option value="masculino">Masculino</option>
-            <option value="feminino">Feminino</option>
-        </select>
-        <br>
-        <label for="altura">Altura (cm):</label>
-        <input type="number" id="altura" >
-     <br>
-        <label for="peso">Peso (kg):</label>
-        <input type="number" id="peso">
-        <br>
-        <br>
-        <button type="button" onclick="calcularTMB()">Calcular TMB</button>
-    </form>
+<form id="tmbForm" style="border: 2px solid orange; padding: 50px; border-radius: 10px; width: 30%;  margin-left: auto;   margin-right: auto; ">
+        <h3>Calculador de TMB</h3>
+    <label for="idade">Idade:</label>
+    <br>
+    <input type="number" id="idade">
+    <br>
+    <label for="sexo">Sexo:</label>
+    <br>
+    <select id="sexo">
+        <option value="masculino"></option>
+        <option value="masculino">Masculino</option>
+        <option value="feminino">Feminino</option>
+    </select>
+    <br>
+    <label for="altura">Altura (cm):</label>
+    <br>
+    <input type="number" id="altura">
+    <br>
+    <label for="peso">Peso (kg):</label>
+    <br>
+    <input type="number" id="peso">
+    <br>
+    <br>
+    <button type="button" onclick="calcularTMB()">Calcular TMB</button>
+    <p>Resultado:</p>
+    <div id="result"></div>
+</form>
     <!--(Richard) Fim do form -->
     
     <div id="result"></div>
