--- a/dieta.html
+++ b/dieta.html
@@ -116,14 +116,13 @@
     <h3>Para que serve?</h3>
     <p>
             A TMB é usada para estimar a quantidade de calorias que uma pessoa precisa consumir diariamente para manter seu peso, considerando apenas o metabolismo em repouso.
-             É uma medida fundamental em nutrição e dietética.
+             É uma medida fundamental em nutrição.
     </p>
     <h3>Como pode ajudar uma pessoa?</h3>
     <p>
 
            Pode ajudar a você á controlar seu peso, ou seja, a determinar quantas calorias consumir para ganhar, perder ou manter o peso.
-            Planejar sua Dietas, vai facilita a personalização de dietas baseadas nas necessidades calóricas individuais.
-            Saúde Geral Compreender a TMB pode levar a hábitos alimentares mais saudáveis e informados, contribuindo para uma melhor saúde geral.
+            Ter conhecimento sobre a sua Taxa Metabólica Basal irá ajudá-lo a personalizar sua alimentação com base nas necessidades calóricas individuais.
     </p>
 
 </div>
