--- a/dieta.html
+++ b/dieta.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 
     <title>NutriHUB</title>
+
 </head>
 
 <body>
@@ -108,18 +109,18 @@
     <br>
         <!--(Richard)Explicando o TMB -->
     <div >
-    <h3>O que é TMB?</h3>
-    <p>
+    <h3 style="color: green;  text-align: center; font-weight: bold; ">O que é TMB?</h3>
+    <p style="padding: 20px;">
      E a Taxa Metabólica Basal é a quantidade mínima de energia (calorias) que o corpo necessita para manter suas funções vitais enquanto está em repouso. 
      Isso inclui funções como respiração, circulação sanguínea, controle da temperatura corporal e atividade celular.
     </p>
-    <h3>Para que serve?</h3>
-    <p>
+    <h3 style="color: green;  text-align: center; font-weight: bold;">Para que serve?</h3>
+    <p style="padding: 20px;">
             A TMB é usada para estimar a quantidade de calorias que uma pessoa precisa consumir diariamente para manter seu peso, considerando apenas o metabolismo em repouso.
              É uma medida fundamental em nutrição.
     </p>
-    <h3>Como pode ajudar uma pessoa?</h3>
-    <p>
+    <h3 style="color: green; text-align: center; font-weight: bold;">Como pode ajudar uma pessoa?</h3>
+    <p style="padding: 20px;">
 
            Pode ajudar a você á controlar seu peso, ou seja, a determinar quantas calorias consumir para ganhar, perder ou manter o peso.
             Ter conhecimento sobre a sua Taxa Metabólica Basal irá ajudá-lo a personalizar sua alimentação com base nas necessidades calóricas individuais.
@@ -127,8 +128,8 @@
 
 </div>
     <!--(Richard) Começando o form -->
-<form id="tmbForm" style="border: 2px solid orange; padding: 50px; border-radius: 10px; width: 30%;  margin-left: auto;   margin-right: auto; ">
-        <h3>Calculador de TMB</h3>
+<form id="tmbForm" style="border: 2px solid green; padding: 50px; border-radius: 10px; width: 30%;  margin-left: auto;   margin-right: auto; ">
+        <h3 style="color: green; font-weight: bold;">Calculador de TMB</h3>
     <label for="idade">Idade:</label>
     <br>
     <input type="number" id="idade">
