--- a/index.html
+++ b/index.html
@@ -106,15 +106,20 @@
     <!--Textos do site que alguma hora vai ser estilizado-->
 
 
-    <h1>Como nosso site pode te ajudar a melhorar sua alimentação:</h1>
+    <!--          <p>Blog de escolhas saudáveis - Gabriel H.</p>
     <p>Blog calorias(tmb)/ calculadora de calorias(tmb) - Richard</p>
     <p>Blog macronutrientes/ Calculadora de macronutrientes - Gusmão</p>
-    <p>Blog de composição corporal/ calculadora de Gordura Corporal - Joao Paulo</p>
-    <p>Blog de IMC/ Calculadora de IMC - Abner</p>
+    <p>Blog de composição corporal/gordura corporal, explicar os benefícios, doenças colocar aquela foto que mostra a % de homens e mulheres... - Joao Paulo</p>
+    <p>Blog de IMC/ Calculadora de IMC - Abner</p >  -->
          <br><br>
     
 
-
+         <h1>Como melhorar sua alimentação?</h1>
+         <p>Para melhorar sua alimentação, primeiro você deve entender que a melhor dieta do mundo é a que pode ser seguida, ou seja,
+             sem dietas radicais, muito restritivas e impossíveis de serem seguidas. Para entender mais sobre os alimentos, e saber se um alimento
+             é saudável ou não consulte nossa página <a href="ARQUIVO_MUDAR.HTML">a</a>
+         </p>
+         <br><br>   
 
     <h1>O que é uma caloria?</h1>
     <p>Todo alimento tem um valor energético, a caloria é nada mais que uma unidade
@@ -131,9 +136,9 @@
 
 
     <h1>Composição Corporal</h1>
-    <p>TEXTOMUDAR TEXTOMUDAR TEXTOMUDAR
-        TEXTOMUDAR TEXTOMUDAR TEXTOMUDAR
- <a href="ARQUIVO_MUDAR.HTML">Calculadora de Composição corporal</a>.
+    <p> O nosso corpo é composto por vários tecidos, um deles é a gordura. A gordura corporal esta diretamente relacionada com a saúde e estética de um indivíduo.
+        Sabendo disso, para saber a porcentagem do seu corpo que é gordura, e quais os impactos disso na saúde, consulte nossa página de
+ <a href="ARQUIVO_MUDAR.HTML">Composição Corporal e Gordura Corporal</a>.
     </p>
     <img src="FOTOILUSTRATIVA_COLOCAR">
     
